BUG: 24820

immediately redraw visited links with the respective color when the page
got loaded and inserted into the history

svn path=/branches/KDE/3.5/kdelibs/; revision=617941